# active-info-daily

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  vercel.json
config/: sources.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  WORKLOG.md
site/: index.html  rss.xml
site/reports/2026-02-20/: index.html
site/reports/2026-02-21/: index.html
site/reports/2026-02-22/: index.html
src/active_info/: __init__.py  analysis.py  cli.py  config.py  dedupe.py  earnings_interpreter.py  innovation_curator.py  models.py  pipeline.py  power_interpreter.py  reporting.py  scheduler.py  scoring.py  source_loader.py  static_export.py  storage.py  translation.py  trends.py  web.py
src/active_info.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/active_info/fetchers/: __init__.py  context.py  polymarket.py  rss.py  sec_filings.py
src/active_info/templates/: index.html  report.html
tests/: test_dedupe.py  test_earnings_interpreter.py  test_innovation_curator.py  test_pipeline_novelty.py  test_pipeline_sec_cap.py  test_power_interpreter.py  test_power_trading_scoring.py  test_reporting_earnings_table.py  test_scoring.py  test_static_export.py  test_translation_source_links.py  test_trends.py
